--- a/test-common/Cargo.toml
+++ b/test-common/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "gendoc"
+name = "test-common"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-markdown-gen = "1.2.1"
 postgres = "0.19.2"
-test-common = "0.1.0"
-rand = "0.8.5"
+pretty_env_logger = "0.4"
+testcontainers = "0.12.0"
