--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -13,6 +13,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     outputs:
+      branch_name: ${{steps.metadata.outputs.branch_name}}
       image_branch_name: ${{steps.metadata.outputs.image_branch_name}}
     strategy:
       matrix:
@@ -43,10 +44,12 @@ jobs:
         run: |
           tsmajor=$(echo ${{ matrix.tsversion }} | cut -d. -f1)
           tsmajmin=$(echo ${{ matrix.tsversion }} | cut -d. -f1,2)
-          image_branch_name=$(echo ${{github.head_ref || github.ref_name}} | sed 's#/#-#')
+          branch_name=$(echo ${{github.head_ref || github.ref_name}})
+          image_branch_name=$(echo ${branch_name} | sed 's#/#-#')
           build_type_suffix=$(echo "-${{matrix.base}}" | sed 's/-ha//')
           echo "::set-output name=tsmajor::${tsmajor}"
           echo "::set-output name=tsmajmin::${tsmajmin}"
+          echo "::set-output name=branch_name::${branch_name}"
           echo "::set-output name=image_branch_name::${image_branch_name}"
           echo "::set-output name=build_type_suffix::${build_type_suffix}"
 
@@ -125,17 +128,43 @@ jobs:
             timescaledev/promscale-extension:latest-ts${{matrix.tsversion}}-pg${{matrix.pgversion}}
             timescaledev/promscale-extension:latest-ts${{steps.metadata.outputs.tsmajor}}-pg${{matrix.pgversion}}
 
+  pick-connector-branch:
+    name: picking connector's repo branch
+    runs-on: ubuntu-latest
+    needs:
+      - docker
+    outputs:
+      branch:  ${{ steps.curl.outputs.branch }}
+    steps:
+     - name: curl check matching branch
+       id: curl
+       run: |
+          branch_name=${{ needs.docker.outputs.branch_name }}
+          res=$(curl \
+                  -sw'%{http_code}\n' \
+                  -H "Accept: application/vnd.github.v3+json" \
+                  https://api.github.com/repos/timescale/promscale/branches/${branch_name} | tail -1)
+          if [[ "$res" = "200" ]]; then
+            echo "::set-output name=branch::${branch_name}"
+          elif [[ "$res" == "404" ]]; then
+            echo "::set-output name=branch::master"
+          else
+            echo "Unexpected HTTP response: $res"
+            exit 1
+          fi;
+
   call-connector-e2e:
     name: call connector e2e test
     needs:
       - docker
+      - pick-connector-branch
     if: needs.docker.result == 'success'
     uses: timescale/promscale/.github/workflows/go-e2e.yml@master
     with:
-      # The intention here is to always run extention against connector's master
-      # branch. This way we make sure extension doesn't accidentally break compatibility.
+      # If there is a branch with the same name in the connector repo we use that one
+      # to run e2e tests. Otherwise we run them on master.
       docker_image_prefix:  ${{ needs.docker.outputs.image_branch_name }}-ts2
-      ref: master
+      ref: ${{ needs.pick-connector-branch.outputs.branch }}
 
   # This allows us to set a single job which must pass in GitHub's branch protection rules,
   # otherwise we have to keep updating them as we add or remove postgres versions etc.
