--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -13,6 +13,7 @@ log = "0.4.17"
 test-common = "0.1.0"
 semver = "1.0.12"
 postgres = "0.19.2"
+testcontainers = "0.14.0"
 
 [build-dependencies]
 build-deps = "^0.1"
