--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["test-common", "e2e", "sql-tests", "gendoc"]
 
 [package]
 name = "promscale"
-version = "0.5.4"
+version = "0.5.5-dev"
 edition = "2018"
 
 [lib]
